Fix .u-text-wrap

--- a/res/css/_utils.css
+++ b/res/css/_utils.css
@@ -85,6 +85,7 @@
 
 .u-text-wrap {
   overflow-wrap: break-word;
+  word-break: break-word;
   white-space: normal;
 }
 
